syntax = "proto3";
package pub;

message RegionBase {
	string			uuid = 1;
	uint32			version = 2;
}

message Region {
	RegionBase		region = 1;
	string			idc = 2;
	string			bus_address = 3;
	string			snapshot_address = 4;
}

message RmRegion {
	string			uuid = 1;
}

message Service {
	RegionBase		region = 1;
	string			name = 2;
	string			address = 3;
}

message RmService {
	RegionBase		region = 1;
	string			name = 2;
}

message Payload {
	RegionBase		region = 1;
	string			uuid = 2;
}

message RmPayload {
	RegionBase		region = 1;
	string			uuid = 2;
}

